<resources>
    <string name="app_name">SecondActivity</string>
    <string name="button_open_second">Open Second Activity</string>
    <string name="welcome">Welcome to Second Activity</string>
    <string name="go_back">Go back</string>
    <string name="button_return_data">Return data</string>
    <string name="open_browser">Open browser</string>
    <string name="open_maps">Open Map</string>
    <string name="make_call">Make call</string>
</resources>