<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_open_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_open_second" />

    <Button
        android:id="@+id/button_open_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_browser" />

    <Button
        android:id="@+id/button_open_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_maps" />

    <Button
        android:id="@+id/button_make_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_call" />


</LinearLayout>